--- a/src/main/resources/static/navbar.html
+++ b/src/main/resources/static/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="#">Home</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
@@ -7,9 +7,6 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarCollapse">
 			<ul class="navbar-nav me-auto mb-2 mb-md-0">
-				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">Clientes</a>
-				</li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
 						data-bs-toggle="dropdown" aria-expanded="false">
@@ -19,6 +16,17 @@
 						<li><a class="dropdown-item" href="#">Solicitar entrega</a></li>
 						<li><a class="dropdown-item" href="#">Registrar ocorrencia</a></li>
 						<li><a class="dropdown-item" href="#">Visualizar entregas</a></li>
+					</ul>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+						data-bs-toggle="dropdown" aria-expanded="false">
+						Clientes
+					</a>
+					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<li><a class="dropdown-item" href="cad-clientes.html">Cadastrar</a></li>
+						<li><a class="dropdown-item" href="lista-clientes.html">Visualizar</a></li>
+
 					</ul>
 				</li>
 			</ul>
