--- a/src/main/resources/static/cad-clientes.html
+++ b/src/main/resources/static/cad-clientes.html
@@ -7,7 +7,7 @@
 
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
+	<script src="https://kit.fontawesome.com/312c97e8d7.js" crossorigin="anonymous"></script>
 	<title>Delivery System</title>
 </head>
 
@@ -78,18 +78,14 @@
 					</table>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-					<button type="button" class="btn btn-primary">Understood</button>
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<script src="https://code.jquery.com/jquery-3.6.1.min.js"
-		integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-		crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
 	<script type="text/javascript">
 		$(function () {
@@ -128,13 +124,13 @@
 					success: function (response) {
 						document.getElementById('resultados').innerHTML = '';
 						for (var i = 0; i < response.length; i++) {
-							$('#tabela > tbody').append('<tr>');
+							$('#tabela > tbody').append('<tr id="'+response[i].id+'">');
 							$('#tabela > tbody').append('<td>' + response[i].id + '</td>');
 							$('#tabela > tbody').append('<td>' + response[i].nome + '</td>');
 							$('#tabela > tbody').append('<td>' + response[i].email + '</td>');
 							$('#tabela > tbody').append('<td>' + response[i].telefone + '</td>');
-							$('#tabela > tbody').append('<td><button type="button" onClick="colocarEmEdicao(' + response[i].id + ')" class="btn btn-link">Editar</button></td>');
-							$('#tabela > tbody').append('<td><button type="button" class="btn btn-link">Excluir</button></td>');
+							$('#tabela > tbody').append('<td><a href="#" onClick="colocarEmEdicao(' + response[i].id + ')"><i class="fa-solid fa-file-pen"></i></a></td>');
+							$('#tabela > tbody').append('<td><a href="#" onClick="excluirCliente('+ response[i].id +')"><i class="fa-solid fa-trash"></i></a></td>');
 							$('#tabela > tbody').append('</tr>');
 						}
 					}
@@ -142,6 +138,20 @@
 					alert("Erro ao buscar cliente " + xhr.responseText);
 				})
 			}
+		}
+		
+		function excluirCliente(id){
+			$.ajax({
+				method: "DELETE",
+				url: "clientes/"+id,
+				data: "id=" + id,
+				success: function (response) {
+					pesquisarCliente();
+					alert("Cliente excluido!");
+				}
+			}).fail(function (xhr, status, errorThrown) {
+				alert("Erro ao excluir cliente." + xhr.responseText);
+			})
 		}
 
 		function salvarCliente() {
