--- a/src/main/resources/public/navbar.html
+++ b/src/main/resources/public/navbar.html
@@ -13,7 +13,7 @@
 						Entregas
 					</a>
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<li><a class="dropdown-item" href="#">Solicitar entrega</a></li>
+						<li><a class="dropdown-item" href="solicitar-entrega.html">Solicitar entrega</a></li>
 						<li><a class="dropdown-item" href="#">Registrar ocorrencia</a></li>
 						<li><a class="dropdown-item" href="#">Visualizar entregas</a></li>
 					</ul>
