--- a/src/main/resources/static/solicitar-entrega.html
+++ b/src/main/resources/static/solicitar-entrega.html
@@ -52,7 +52,7 @@
 
 			<button type="button" class="btn btn-primary" onclick="salvarSolicitacaoEntrega()">Salvar</button>
 			<button type="button" class="btn btn-secondary"
-				onclick="document.getElementById('formSolicitacaoEntrega').reset();">Novo</button>
+				onclick="limparForm();">Novo</button>
 			<button type="button" class="btn btn-danger" onclick="excluirSolicitacaoEntrega()">Excluir</button>
 			<!-- Button trigger modal -->
 			<button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#modalPesquisar">
