--- a/src/main/resources/static/lista-clientes.html
+++ b/src/main/resources/static/lista-clientes.html
@@ -14,8 +14,9 @@
 <body>
 
 	<div id="navbar"></div>
-
 	<h1>Clientes cadastrados</h1>
+	
+	<div id="msgs"></div>
 
 	<table class="table">
 		<thead>
@@ -34,12 +35,15 @@
 	</table>
 	</div>
 
-
 	<div id="footer"></div>
 
 	<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="./scripts-cliente.js"></script>
+	
+	<script>
+		listarClientes();
+	</script>
 
 
 </body>
