Entregas solicitadas - Layout/Get

--- a/src/main/resources/public/navbar.html
+++ b/src/main/resources/public/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#">Home</a>
+		<a class="navbar-brand" href="/">Home</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
 			aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -15,7 +15,7 @@
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 						<li><a class="dropdown-item" href="solicitar-entrega.html">Solicitar entrega</a></li>
 						<li><a class="dropdown-item" href="registrar-ocorrencia.html">Registrar ocorrencia</a></li>
-						<li><a class="dropdown-item" href="#">Visualizar entregas</a></li>
+						<li><a class="dropdown-item" href="lista-entregas.html">Visualizar entregas</a></li>
 					</ul>
 				</li>
 				<li class="nav-item dropdown">
@@ -26,14 +26,9 @@
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 						<li><a class="dropdown-item" href="cad-clientes.html">Cadastrar</a></li>
 						<li><a class="dropdown-item" href="lista-clientes.html">Visualizar</a></li>
-
 					</ul>
 				</li>
 			</ul>
-			<form class="d-flex">
-				<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-				<button class="btn btn-outline-success" type="submit">Pesquisar</button>
-			</form>
 		</div>
 	</div>
 </nav>
