--- a/src/main/resources/static/cad-clientes.html
+++ b/src/main/resources/static/cad-clientes.html
@@ -40,7 +40,7 @@
 
 			<button type="button" class="btn btn-primary" onclick="salvarCliente()">Salvar</button>
 			<button type="button" class="btn btn-secondary"
-				onclick="document.getElementById('formCadCli').reset();">Novo</button>
+				onclick="document.getElementById('formCadCli').reset(); $('#msgs').hide();">Novo</button>
 			<button type="button" class="btn btn-danger" onclick="botaoDeletar()">Excluir</button>
 			<!-- Button trigger modal -->
 			<button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#modalPesquisar">
