--- a/src/main/resources/static/lista-entregas.html
+++ b/src/main/resources/static/lista-entregas.html
@@ -7,6 +7,7 @@
 
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="./styles.css" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/312c97e8d7.js" crossorigin="anonymous"></script>
 	<title>Delivery System</title>
 </head>
