Ajustes nos layouts

--- a/src/main/resources/static/cad-clientes.html
+++ b/src/main/resources/static/cad-clientes.html
@@ -7,6 +7,7 @@
 
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="./styles.css" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/312c97e8d7.js" crossorigin="anonymous"></script>
 	<title>Delivery System</title>
 </head>
@@ -16,39 +17,41 @@
 	<div id="navbar"></div>
 	<div id="modal"></div>
 
-	<h1>Cadastro de clientes</h1>
+	<div class="container">
+		<h4>Cadastro de clientes</h4>
 
-	<div style="padding: 30px;">
-		<form method="" id="formCadCli">
-			<div id="msgs"></div>
-			<div class="mb-3">
-				<label for="id" class="form-label">ID</label>
-				<input type="text" class="form-control" id="id" disabled />
-			</div>
-			<div class="mb-3">
-				<label for="nome" class="form-label">Nome</label>
-				<input type="text" class="form-control" id="nome" />
-			</div>
-			<div class="mb-3">
-				<label for="email" class="form-label">Email</label>
-				<input type="email" class="form-control" id="email">
-			</div>
-			<div class="mb-3">
-				<label for="telefone" class="form-label">Telefone</label>
-				<input type="number" class="form-control" id="telefone">
-			</div>
+		<div style="padding: 30px;">
+			<form method="" id="formCadCli">
+				<div id="msgs"></div>
+				<div class="mb-3">
+					<label for="id" class="form-label">ID</label>
+					<input type="text" class="form-control" id="id" disabled />
+				</div>
+				<div class="mb-3">
+					<label for="nome" class="form-label">Nome</label>
+					<input type="text" class="form-control" id="nome" />
+				</div>
+				<div class="mb-3">
+					<label for="email" class="form-label">Email</label>
+					<input type="email" class="form-control" id="email">
+				</div>
+				<div class="mb-3">
+					<label for="telefone" class="form-label">Telefone</label>
+					<input type="number" class="form-control" id="telefone">
+				</div>
 
-			<button type="button" class="btn btn-primary" onclick="salvarCliente()">Salvar</button>
-			<button type="button" class="btn btn-secondary"
-				onclick="document.getElementById('formCadCli').reset(); $('#msgs').hide();">Novo</button>
-			<button type="button" class="btn btn-danger" onclick="botaoDeletar()">Excluir</button>
-			<!-- Button trigger modal -->
-			<button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#modalPesquisar">
-				Pesquisar
-			</button>
-		</form>
+				<button type="button" class="btn btn-primary" onclick="salvarCliente()">Salvar</button>
+				<button type="button" class="btn btn-secondary"
+					onclick="document.getElementById('formCadCli').reset(); $('#msgs').hide();">Novo</button>
+				<button type="button" class="btn btn-danger" onclick="botaoDeletar()">Excluir</button>
+				<!-- Button trigger modal -->
+				<button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#modalPesquisar">
+					Pesquisar
+				</button>
+			</form>
+		</div>
 	</div>
-
+	
 	<div id="footer"></div>
 
 	<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
