--- a/src/main/resources/static/lista-entregas.html
+++ b/src/main/resources/static/lista-entregas.html
@@ -15,32 +15,34 @@
 <body>
 
 	<div id="navbar"></div>
-	<h1>Entregas solicitadas</h1>
 
-	<div id="msgs"></div>
+	<div class="container">
+		<h4>Entregas solicitadas</h4>
 
-	<table class="table table-bordered border-primary table-sm">
-		<thead>
-			<tr>
-				<th scope="col">Id</th>
-				<th scope="col">Cliente</th>
-				<th scope="col">Destinatário</th>
-				<th scope="col">Logradouro</th>
-				<th scope="col">Bairro</th>
-				<th scope="col">Numero</th>
-				<th scope="col">Complemento</th>
-				<th scope="col">Taxa</th>
-				<th scope="col">Data</th>
-				<th scope="col">Finalização</th>
-				<th scope="col">Status</th>
-				<th scope="col">Ações</th>
-			</tr>
-		</thead>
+		<div id="msgs"></div>
 
-		<tbody id="resultados">
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th scope="col">Id</th>
+					<th scope="col">Cliente</th>
+					<th scope="col">Destinatário</th>
+					<th scope="col">Logradouro</th>
+					<th scope="col">Bairro</th>
+					<th scope="col">Numero</th>
+					<th scope="col">Complemento</th>
+					<th scope="col">Taxa</th>
+					<th scope="col">Data</th>
+					<th scope="col">Finalização</th>
+					<th scope="col">Status</th>
+					<th scope="col">Ações</th>
+				</tr>
+			</thead>
 
-		</tbody>
-	</table>
+			<tbody id="resultados">
+
+			</tbody>
+		</table>
 	</div>
 
 	<div id="footer"></div>
@@ -48,6 +50,7 @@
 	<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="./scripts-entregas.js"></script>
+	<script src="./moment-with-locales.min.js"></script>
 
 	<script>
 		listarEntregas();
