--- a/src/main/resources/static/solicitar-entrega.html
+++ b/src/main/resources/static/solicitar-entrega.html
@@ -7,6 +7,7 @@
 
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="./styles.css" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/312c97e8d7.js" crossorigin="anonymous"></script>
 	<title>Delivery System</title>
 </head>
@@ -16,51 +17,48 @@
 	<div id="navbar"></div>
 	<div id="modal"></div>
 
-	<h1>Solicitação de entrega</h1>
-	
-	<div style="padding: 30px;">
-		<form method="" id="formSolicitacaoEntrega">
-			<div id="msgs"></div>
-			<div class="mb-3">
-				<label for="id" class="form-label">ID do cliente</label>
-				<input type="text" class="form-control" id="idDestinatario" />
-			</div>
-			<div class="mb-3">
-				<label for="nomeDestinatario" class="form-label">Nome do destinatário</label>
-				<input type="text" class="form-control" id="nomeDestinatario" />
-			</div>
-			<div class="mb-3">
-				<label for="logradouroDestinatario" class="form-label">Logradouro</label>
-				<input type="text" class="form-control" id="logradouroDestinatario">
-			</div>
-			<div class="mb-3">
-				<label for="bairroDestinatario" class="form-label">Bairro</label>
-				<input type="text" class="form-control" id="bairroDestinatario">
-			</div>
-			<div class="mb-3">
-				<label for="numeroDestinatario" class="form-label">Numero</label>
-				<input type="number" class="form-control" id="numeroDestinatario">
-			</div>
-			<div class="mb-3">
-				<label for="complementoDestinatario" class="form-label">Complemento</label>
-				<input type="text" class="form-control" id="complementoDestinatario">
-			</div>
-			<div class="mb-3">
-				<label for="taxa" class="form-label">Taxa</label>
-				<input type="text" class="form-control" id="taxa">
-			</div>
+	<div class="container">
+		<h4>Solicitação de entrega</h4>
 
-			<button type="button" class="btn btn-primary" onclick="salvarSolicitacaoEntrega()">Salvar</button>
-			<button type="button" class="btn btn-secondary"
-				onclick="limparForm();">Novo</button>
-			<!-- Button trigger modal -->
-			<button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#modalPesquisar">
-				Pesquisar
-			</button>
-		</form>
+		<div style="padding: 30px;">
+			<form method="" id="formSolicitacaoEntrega">
+				<div id="msgs"></div>
+				<div class="mb-3">
+					<label for="id" class="form-label">ID do cliente</label>
+					<input type="text" class="form-control" id="idDestinatario" />
+				</div>
+				<div class="mb-3">
+					<label for="nomeDestinatario" class="form-label">Nome do destinatário</label>
+					<input type="text" class="form-control" id="nomeDestinatario" />
+				</div>
+				<div class="mb-3">
+					<label for="logradouroDestinatario" class="form-label">Logradouro</label>
+					<input type="text" class="form-control" id="logradouroDestinatario">
+				</div>
+				<div class="mb-3">
+					<label for="bairroDestinatario" class="form-label">Bairro</label>
+					<input type="text" class="form-control" id="bairroDestinatario">
+				</div>
+				<div class="mb-3">
+					<label for="numeroDestinatario" class="form-label">Numero</label>
+					<input type="number" class="form-control" id="numeroDestinatario">
+				</div>
+				<div class="mb-3">
+					<label for="complementoDestinatario" class="form-label">Complemento</label>
+					<input type="text" class="form-control" id="complementoDestinatario">
+				</div>
+				<div class="mb-3">
+					<label for="taxa" class="form-label">Taxa</label>
+					<input type="text" class="form-control" id="taxa">
+				</div>
 
+				<button type="button" class="btn btn-primary" onclick="salvarSolicitacaoEntrega()">Salvar</button>
+				<button type="button" class="btn btn-secondary" onclick="limparForm();">Novo</button>
+			</form>
+
+		</div>
 	</div>
-
+	
 	<div id="footer"></div>
 
 	<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
