--- a/src/main/resources/static/lista-clientes.html
+++ b/src/main/resources/static/lista-clientes.html
@@ -21,7 +21,7 @@
 
 		<div id="msgs"></div>
 		
-		<table class="table">
+		<table class="table text-center">
 			<thead>
 				<tr>
 					<th scope="col">#</th>
