--- a/src/main/resources/static/lista-entregas.html
+++ b/src/main/resources/static/lista-entregas.html
@@ -15,13 +15,14 @@
 <body>
 
 	<div id="navbar"></div>
+	<div id="modal"></div>
 
 	<div class="container">
 		<h4>Entregas solicitadas</h4>
 
 		<div id="msgs"></div>
 
-		<table class="table table-striped">
+		<table class="table table-striped text-center" id="tabela">
 			<thead>
 				<tr>
 					<th scope="col">Id</th>
@@ -35,13 +36,12 @@
 					<th scope="col">Data</th>
 					<th scope="col">Finalização</th>
 					<th scope="col">Status</th>
-					<th scope="col">Ações</th>
 				</tr>
 			</thead>
 
 			<tbody id="resultados">
 
-			</tbody>
+			</tbody id="resultados">
 		</table>
 	</div>
 
@@ -49,13 +49,12 @@
 
 	<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="./scripts-entregas.js"></script>
 	<script src="./moment-with-locales.min.js"></script>
-
-	<script>
+	<script src="./scripts-entregas.js"></script>
+	
+	<script type="text/javascript">
 		listarEntregas();
 	</script>
-
 
 </body>
 
