--- a/src/main/resources/static/registrar-ocorrencia.html
+++ b/src/main/resources/static/registrar-ocorrencia.html
@@ -43,7 +43,7 @@
 
 	<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="./scripts-ocorrencia.js"></script>
+	<script src="./scripts-ocorrencias.js"></script>
 
 
 </body>
